fix 02 com.leevilaune.association.Library